objects/Link__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Stage_Work_Element_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Element ID</label>
        <referenceTo>Stage_Work_Element__c</referenceTo>
        <relationshipLabel>Links</relationshipLabel>
        <relationshipName>Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Link</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Link-{0000000000}</displayFormat>
        <label>Link ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>My Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ODP_VR_ValidateURL</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( CONTAINS( Link__c , &apos;http:&apos;) || CONTAINS( Link__c , &apos;https:&apos;))</errorConditionFormula>
        <errorDisplayField>Link__c</errorDisplayField>
        <errorMessage>URL must start with http or https</errorMessage>
    </validationRules>
</CustomObject>